# nonebot_adapter_mirai2

./: README.md  book.toml  pyproject.toml  setup.py
adapters/mirai/: adapter.py  bot.py  bot.pyi  config.py  utils.py
docs/: 404.html  index.html  print.html  searchindex.js  searchindex.json  事件处理器.html  安装与配置.html  概述.html  消息处理器.html  用法.html
nonebot/adapters/mirai/: permission.py
nonebot/adapters/mirai2/: __init__.py  adapter.py  bot.pyi  config.py  exception.py  log.py  message.py  permission.py  utils.py
nonebot/adapters/mirai2/event/: __init__.py  base.py  message.py  meta.py  notice.py  request.py
nonebot2/adapters/mirai/: __init__.py  event.py
src/: SUMMARY.md  事件处理器.md  安装与配置.md  概述.md  消息处理器.md  用法.md
