[tool.poetry]
name = "nonebot_adapter_mirai2"
version = "2.0.0b1"
description = "兼容 MiraiApiHttp2.x → nonebot2.0.0b1"
authors = ["ieew <i@ieew.cc>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [
  { include = "nonebot" }
]
exclude = ["nonebot/__init__.py", "nonebot/adapters/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8,^3.9"
nonebot2 = "^2.0.0b1"

[tool.poetry.dev-dependencies]
nonebot2 = "^2.0.0b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
