[tool.poetry]
name = "nonebot_adapter_mirai2"
version = "0.0.17"
description = "兼容 MiraiApiHttp2.x 的 nonebot2_adapter"
authors = ["ieew <i@ieew.cc>"]
license = "AGPL-3.0"

packages = [
  { include = "nonebot" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
nonebot2 = "^2.0.0-beta.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
